<?xml version="1.0"?>
<package format="2">
  <name>kalman</name>
  <version>0.0.1</version>
  <description>This package includes classes for implementing a kalman filter with data association </description>
  <maintainer email="keenan.burnett@autodrive.utoronto.ca">keenan</maintainer>
  <author>Keenan Burnett</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>zeus_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geodesy</depend>
  <depend>zeus_pcl</depend>
  <depend>roslint</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
</package>
