<?xml version="1.0"?>
<package format="2">
  <name>object_detection</name>
  <version>0.0.1</version>
  <description>The object_detection package</description>
  <maintainer email="keenan.burnett@autodrive.utoronto.ca">keenan</maintainer>
  <author>Keenan Burnett</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>zeus_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>kalman</depend>
  <depend>zeus_pcl</depend>
  <depend>roslint</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

</package>
