<?xml version="1.0"?>
<package format="2">
  <name>zeus_pcl</name>
  <version>0.0.0</version>
  <description>The zeus_pcl package</description>
  <maintainer email="keenan.burnett@autodrive.utoronto.ca">keenan</maintainer>
  <author>Keenan Burnett</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  
  <depend>zeus_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>roslint</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

</package>
